--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="player-damage-taken">&nbsp</div>
         <div id="monster-health" class="health-bar">30</div>
         <div id="monster-damage-taken">&nbsp</div>
-        <div id="level">Level: <span id="level-number">1</span></div>
+        <div id="level">You are level: <span id="level-number">1</span></div>
         <button id="fight">Fight</button>
         <div id="results">Let the battle begin!</div>
     </section>
